--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Мой первый сайт </title>
 </head>
 <body>
-Здравствуйте! Это моя первая веб-страница!
+    <a href="payment.html">Pay</a>
 </body>
 </html>
