--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Мой первый сайт </title>
+<script>/* Google Analytics */</script>
 </head>
 <body>
     <a href="payment.html">Pay</a>
